[package]
name = "wasm-sand-sim"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.42"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
debug = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
